Re-add flopy conda installation "echo"

--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -170,11 +170,11 @@ kwb.nextcloud::download_files(href = mf_files$href,
 
 ### Install flopy
 
-```{r install_flopy_ghactions, echo = FALSE, eval = is_ghactions}
+```{r install_flopy_ghactions, eval = is_ghactions}
 reticulate::install_miniconda()
 
 ### create an environment "flopy" for installing "flopy" 
-
+reticulate::conda_create(envname = "flopy", packages = "flopy")
 
 ```
 
