--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -175,14 +175,15 @@ kwb.nextcloud::download_files(href = mf_files$href,
 
 ### create an environment "flopy" for installing "flopy" 
 kwb.python::conda_py_install(env_name = "flopy", 
-                             pkgs = list(conda = c("python", "flopy", "pyshp"), 
-                                         py = NULL))
+                             pkgs = list(conda = c("python", "pyshp"), 
+                                         py = "https://github.com/modflowpy/flopy/zipball/develop/19bc25ead4f00144ec2491a7e1121ad3d0b4ea23"))
 
 ```
 
 ### Use flopy
 
 ```{r use_flopy, eval = TRUE}
+reticulate::use_miniconda("flopy", required = TRUE)
 # reticulate::py_help(object = flopy$utils$postprocessing$get_extended_budget)
 extended_budget <- dwc.ar4gw::get_extended_budget(cbcfile = paths$binary_cell.by.cell) 
 summary(extended_budget$time_1.0$Qx_ext)
@@ -225,20 +226,80 @@ str(gradients)
 summary(gradients)
 
 
-if(FALSE) {
+  budget <- flopy$utils$CellBudgetFile(filename = paths$binary_cell.by.cell)
+
+  times <- budget$get_times()
+
+  times_numeric <- times[[1L]]
+
+  # reticulate::py_help(object = flopy$utils$postprocessing$get_extended_budget)
+  budget_array <- flopy$utils$postprocessing$get_extended_budget(
+      cbcfile = paths$binary_cell.by.cell,
+      totim = times[[1]]) 
+
+  
 # reticulate::py_help(object = flopy$utils$postprocessing$get_specific_discharge)
-specific_discharge <- flopy$utils$postprocessing$get_specific_discharge(
+# Works now with flopy 3.3.4 release candidate: 
+# https://github.com/modflowpy/flopy/blob/b6092cbc94039750de309a832c7f554751782ac1/flopy/utils/postprocessing.py#L606
+specific_discharge <- setNames(flopy$utils$postprocessing$get_specific_discharge(
+  vectors = budget_array, 
   model = mf, 
-  cbcfile = paths$mf_cbc,
-  hdsfile = paths$binary_heads,
-  kstpkper = c(0,0)
-  )
-# Does not work !!!!
-# Fehler in py_call_impl(callable, dots$args, dots$keywords) : 
-#  AttributeError: 'NoneType' object has no attribute 'laycon'
+  head = dat_heads$time_365.0
+  ), 
+  nm = c("qx", "qy", "qz")
+)
 
-}
+# stats for all layers
+summary(specific_discharge$qx)
+summary(specific_discharge$qy)
+summary(specific_discharge$qz)
 
+#top layer
+layer <- 1
+summary(as.vector(specific_discharge$qx[layer,,])) 
+summary(as.vector(specific_discharge$qy[layer,,])) 
+summary(as.vector(specific_discharge$qz[layer,,])) 
+
+# layer2
+layer <- 2
+summary(as.vector(specific_discharge$qx[layer,,])) 
+summary(as.vector(specific_discharge$qy[layer,,])) 
+summary(as.vector(specific_discharge$qz[layer,,]))
+
+### Calculate flow velocity 
+
+# Set effective porosity for each layer
+# layer 1: 0.3 (unconfined)
+# layer 2-8: 0.0001 (confined)
+effective_porosity <- c(0.3, rep(0.0001, 7))
+
+n_layers <- mf$nlay
+
+flow_velocity <- setNames(lapply(specific_discharge, function(q) {
+
+  for (layer in seq_len(n_layers)) {
+    q[layer,,] <- q[layer,,] / effective_porosity[layer]
+  }
+  q
+}), nm = c("vx", "vy", "vz")
+)
+
+# stats for all layers
+summary(flow_velocity$vx)
+summary(flow_velocity$vy)
+summary(flow_velocity$vz)
+
+#top layer
+layer <- 1
+summary(as.vector(flow_velocity$vx[layer,,])) 
+summary(as.vector(flow_velocity$vy[layer,,])) 
+summary(as.vector(flow_velocity$vz[layer,,])) 
+
+# layer2
+layer <- 2
+summary(as.vector(flow_velocity$vx[layer,,])) 
+summary(as.vector(flow_velocity$vy[layer,,])) 
+summary(as.vector(flow_velocity$vz[layer,,]))
 ```
 
 For details on the used `flopy` functions have a look at the documentation here:
