--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -182,7 +182,7 @@ kwb.python::conda_py_install(env_name = "flopy",
 
 ### Use flopy
 
-```{r use_flopy, eval = TRUE}
+```{r use_flopy, eval = FALSE}
 #reticulate::use_miniconda("flopy", required = TRUE)
 # reticulate::py_help(object = flopy$utils$postprocessing$get_extended_budget)
 extended_budget <- dwc.ar4gw::get_extended_budget(cbcfile = paths$binary_cell.by.cell) 
