--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -182,7 +182,7 @@ kwb.python::conda_py_install(env_name = "flopy",
 
 ### Use flopy
 
-```{r use_flopy, eval = FALSE}
+```{r use_flopy, eval = TRUE}
 #reticulate::use_miniconda("flopy", required = TRUE)
 # reticulate::py_help(object = flopy$utils$postprocessing$get_extended_budget)
 extended_budget <- dwc.ar4gw::get_extended_budget(cbcfile = paths$binary_cell.by.cell) 
@@ -225,7 +225,7 @@ gradients <- flopy$utils$postprocessing$get_gradients(
 str(gradients)
 summary(gradients)
 
-
+if(FALSE) {
   budget <- flopy$utils$CellBudgetFile(filename = paths$binary_cell.by.cell)
 
   times <- budget$get_times()
@@ -300,6 +300,7 @@ layer <- 2
 summary(as.vector(flow_velocity$vx[layer,,])) 
 summary(as.vector(flow_velocity$vy[layer,,])) 
 summary(as.vector(flow_velocity$vz[layer,,]))
+}
 ```
 
 For details on the used `flopy` functions have a look at the documentation here:
