--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -167,16 +167,18 @@ kwb.nextcloud::download_files(href = mf_files$href,
 ```
 
 
-## Flopy
+## Flopy release
 
 ### Install flopy
+
+Install latest `flopy` release from `conda` [https://anaconda.org/conda-forge/flopy](https://anaconda.org/conda-forge/flopy)-
 
 ```{r install_flopy_ghactions, eval = is_ghactions}
 
 ### create an environment "flopy" for installing "flopy" 
 kwb.python::conda_py_install(env_name = "flopy", 
-                             pkgs = list(conda = c("python", "pyshp"), 
-                                         py = "https://github.com/modflowpy/flopy/zipball/develop/19bc25ead4f00144ec2491a7e1121ad3d0b4ea23"))
+                             pkgs = list(conda = c("flopy", "python", "pyshp"), 
+                                         py = NULL))
 
 ```
 
@@ -217,7 +219,7 @@ mf <- flopy$modflow$mf$Modflow$load(f = paths$mf_nam,
                                     )
 
 
-if(FALSE) {
+
 # reticulate::py_help(object = flopy$utils$postprocessing$get_gradients)
 gradients <- flopy$utils$postprocessing$get_gradients(
   heads = dat_heads$time_365.0,
@@ -227,77 +229,14 @@ gradients <- flopy$utils$postprocessing$get_gradients(
 str(gradients)
 summary(gradients)
 
-# reticulate::py_help(object = flopy$utils$postprocessing$get_extended_budget)
-budget_array <- flopy$utils$postprocessing$get_extended_budget(
-      cbcfile = paths$binary_cell.by.cell) 
+```
 
-heads_array <- heads$get_alldata()
+### Export 
 
- 
-# reticulate::py_help(object = flopy$utils$postprocessing$get_specific_discharge)
-# Works now with flopy 3.3.4 release candidate: 
-# https://github.com/modflowpy/flopy/blob/b6092cbc94039750de309a832c7f554751782ac1/flopy/utils/postprocessing.py#L606
-specific_discharge <- setNames(flopy$utils$postprocessing$get_specific_discharge(
-  vectors = budget_array, 
-  model = mf, 
-  head = heads_array
-  ), 
-  nm = c("qx", "qy", "qz")
-)
+Model to shapefile (gets really big !!!!)
 
-# stats for all layers
-summary(specific_discharge$qx)
-summary(specific_discharge$qy)
-summary(specific_discharge$qz)
-
-#top layer
-layer <- 1
-summary(as.vector(specific_discharge$qx[layer,,])) 
-summary(as.vector(specific_discharge$qy[layer,,])) 
-summary(as.vector(specific_discharge$qz[layer,,])) 
-
-# layer2
-layer <- 2
-summary(as.vector(specific_discharge$qx[layer,,])) 
-summary(as.vector(specific_discharge$qy[layer,,])) 
-summary(as.vector(specific_discharge$qz[layer,,]))
-
-### Calculate flow velocity 
-
-# Set effective porosity for each layer
-# layer 1: 0.3 (unconfined)
-# layer 2-8: 0.0001 (confined)
-effective_porosity <- c(0.3, rep(0.0001, 7))
-
-n_layers <- mf$nlay
-
-flow_velocity <- setNames(lapply(specific_discharge, function(q) {
-
-  for (layer in seq_len(n_layers)) {
-    q[layer,,] <- q[layer,,] / effective_porosity[layer]
-  }
-  q
-}), nm = c("vx", "vy", "vz")
-)
-
-# stats for all layers
-summary(flow_velocity$vx)
-summary(flow_velocity$vy)
-summary(flow_velocity$vz)
-
-#top layer
-layer <- 1
-summary(as.vector(flow_velocity$vx[layer,,])) 
-summary(as.vector(flow_velocity$vy[layer,,])) 
-summary(as.vector(flow_velocity$vz[layer,,])) 
-
-# layer2
-layer <- 2
-summary(as.vector(flow_velocity$vx[layer,,])) 
-summary(as.vector(flow_velocity$vy[layer,,])) 
-summary(as.vector(flow_velocity$vz[layer,,]))
-}
-
+```{r export, eval = FALSE}
+mf$export(f = "MB16.shp")
 ```
 
 For details on the used `flopy` functions have a look at the documentation here:
@@ -305,10 +244,100 @@ For details on the used `flopy` functions have a look at the documentation here:
 [https://flopy.readthedocs.io/en/latest/source/flopy.utils.postprocessing.html](https://flopy.readthedocs.io/en/latest/source/flopy.utils.postprocessing.html)
 
 
-## Export 
+## Flopy development 
 
-Model to shapefile (gets really big !!!!)
+Install  `flopy development` version from GitHub [https://github.com/modflowpy/flopy](https://github.com/modflowpy/flopy)
 
-```{r export, eval = FALSE}
-mf$export(f = "MB16.shp")
+### Install flopy-dev
+
+
+
+```{r install_flopy_dev_ghactions, eval = is_ghactions}
+
+### create an environment "flopy" for installing "flopy" 
+kwb.python::conda_py_install(env_name = "flopy_dev", 
+                             pkgs = list(conda = c("python", "pyshp"), 
+                                         py = "https://github.com/modflowpy/flopy/zipball/develop/19bc25ead4f00144ec2491a7e1121ad3d0b4ea23"))
+
+
+```
+
+```{r install_flopy_dev_ghactions, eval = FALSE}
+
+reticulate::use_miniconda(condaenv = "flopy_dev", required = TRUE)
+flopy_dev <- reticulate::import("flopy", convert = TRUE)
+# reticulate::py_help(object = flopy$utils$postprocessing$get_extended_budget)
+
+
+kstpkper <- c(0,0)
+
+budget_array <- flopy_dev$utils$postprocessing$get_extended_budget(
+      cbcfile = paths$binary_cell.by.cell, kstpkper = kstpkper) 
+
+heads <- flopy_dev$utils$binaryfile$HeadFile(filename = paths$binary_heads,
+                                         verbose = TRUE)
+
+heads_array <- heads$get_data(kstpkper = kstpkper)
+
+
+mf <- flopy_dev$modflow$mf$Modflow$load(f = paths$mf_nam, 
+                                    model_ws = dirname(paths$mf_nam),
+                                    load_only = c("dis", "bas6", "bcf6"),
+                                    forgive = TRUE,
+                                    verbose = TRUE
+                                    )
+
+ 
+# reticulate::py_help(object = flopy$utils$postprocessing$get_specific_discharge)
+# Works now with flopy 3.3.4 release candidate: 
+# https://github.com/modflowpy/flopy/blob/b6092cbc94039750de309a832c7f554751782ac1/flopy/utils/postprocessing.py#L606
+specific_discharge <- setNames(flopy_dev$utils$postprocessing$get_specific_discharge(
+  vectors = budget_array, 
+  model = mf, 
+  head = heads_array
+  ), 
+  nm = c("qx", "qy", "qz")
+)
+# stats for all layers
+summary(specific_discharge$qx)
+summary(specific_discharge$qy)
+summary(specific_discharge$qz)
+#top layer
+layer <- 1
+summary(as.vector(specific_discharge$qx[layer,,])) 
+summary(as.vector(specific_discharge$qy[layer,,])) 
+summary(as.vector(specific_discharge$qz[layer,,])) 
+# layer2
+layer <- 2
+summary(as.vector(specific_discharge$qx[layer,,])) 
+summary(as.vector(specific_discharge$qy[layer,,])) 
+summary(as.vector(specific_discharge$qz[layer,,]))
+### Calculate flow velocity 
+# Set effective porosity for each layer
+# layer 1: 0.3 (unconfined)
+# layer 2-8: 0.0001 (confined)
+effective_porosity <- c(0.3, rep(0.0001, 7))
+n_layers <- mf$nlay
+flow_velocity <- setNames(lapply(specific_discharge, function(q) {
+  for (layer in seq_len(n_layers)) {
+    q[layer,,] <- q[layer,,] / effective_porosity[layer]
+  }
+  q
+}), nm = c("vx", "vy", "vz")
+)
+# stats for all layers
+summary(flow_velocity$vx)
+summary(flow_velocity$vy)
+summary(flow_velocity$vz)
+#top layer
+layer <- 1
+summary(as.vector(flow_velocity$vx[layer,,])) 
+summary(as.vector(flow_velocity$vy[layer,,])) 
+summary(as.vector(flow_velocity$vz[layer,,])) 
+# layer2
+layer <- 2
+summary(as.vector(flow_velocity$vx[layer,,])) 
+summary(as.vector(flow_velocity$vy[layer,,])) 
+summary(as.vector(flow_velocity$vz[layer,,]))
+
 ```
